allotment panel updated