@@ -1,22 +1,28 @@
-package service;// Make sure to import your models and DAO packages
+package service;
+
+// Make sure to import your models and DAO packages
 import models.Room;
 import models.Student;
 import dao.RoomDAO;
 import dao.StudentDAO;
-import utils.SessionManager;
+import utils.PreferenceConstants; // <-- IMPORTING YOUR CONSTANTS
 
-import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 public class AllotmentEngine {
 
     // Base score for placing a student in an empty room
-    // This encourages filling empty rooms before packing existing ones
     private static final int EMPTY_ROOM_SCORE_BONUS = 50;
+
+    // DAOs should be instantiated or injected
     RoomDAO roomDAO = new RoomDAO();
     StudentDAO studentDAO = new StudentDAO();
+
     /**
      * Main method to run the entire allotment process for a specific hostel.
      * @param hostelId The ID of the hostel to process.
@@ -26,14 +32,15 @@ public class AllotmentEngine {
         System.out.println("==================================================");
 
         // 1. Fetch all data from DAOs
-
+        // Assuming getAllRooms() now correctly fetches by hostelId
+        // If not, you may need to adjust this call
         List<Room> allRooms = roomDAO.getAllRooms();
         List<Student> allStudents = studentDAO.getAllStudents(hostelId);
 
-        // 2. Filter for unassigned students and available rooms
+        // 2. Filter for unassigned students
         List<Student> unassignedStudents = allStudents.stream()
                 .filter(s -> s.getAssignedRoom() == null || s.getAssignedRoom().isEmpty())
-                .toList();
+                .collect(Collectors.toList()); // Use toList() or collect(Collectors.toList())
 
         System.out.println("Found " + unassignedStudents.size() + " unassigned students.");
 
@@ -56,6 +63,8 @@ public class AllotmentEngine {
             System.out.println("Students in group: " + studentsInGroup.size());
 
             // Find all rooms that match this group's hard constraints
+            // We must re-fetch 'allRooms' or use the full list, as their
+            // occupancy state changes during this loop.
             List<Room> matchingRooms = allRooms.stream()
                     .filter(r -> r.getRoomType().equals(roomType) && !r.getRoomFull())
                     .collect(Collectors.toList());
@@ -68,6 +77,7 @@ public class AllotmentEngine {
             // 5. Allot students in this group based on compatibility
             for (Student student : studentsInGroup) {
                 // Find the best possible room for this student
+                // We pass 'allStudents' to find current occupants
                 Room bestRoom = findBestRoomForStudent(student, matchingRooms, allStudents);
 
                 if (bestRoom == null) {
@@ -107,11 +117,22 @@ public class AllotmentEngine {
                     .collect(Collectors.toList());
 
             double currentRoomScore;
+
             if (occupants.isEmpty()) {
                 // This is an empty room. Give it a base score.
                 currentRoomScore = EMPTY_ROOM_SCORE_BONUS;
             } else {
-                // This room has occupants. Calculate average compatibility.
+
+                // --- THIS IS THE NEW HARD CONSTRAINT CHECK ---
+                // Get the first occupant to check the Academic Year
+                Student firstOccupant = occupants.get(0);
+                if (!firstOccupant.getAcademicYear().equals(newStudent.getAcademicYear())) {
+                    // This room is for a different Academic Year. Skip it.
+                    continue;
+                }
+                // --- END OF NEW CHECK ---
+
+                // This room is valid, calculate average compatibility.
                 double totalScore = 0;
                 for (Student occupant : occupants) {
                     totalScore += calculateCompatibility(newStudent, occupant);
@@ -134,12 +155,11 @@ public class AllotmentEngine {
     private void allotStudentToRoom(Student student, Room room) {
         // 1. Update Student
         student.setAssignedRoom(room.getRoomNumber());
-        studentDAO.updateStudent(student);
+        studentDAO.updateStudent(student); // Assuming this updates the DB
 
-        // 2. Update Room
+        // 2. Update Room in our local list AND the database
         room.setOccupancy(room.getOccupancy() + 1);
-        // The setOccupancy method in your model already handles setting isFull
-        roomDAO.updateRoom(room);
+        roomDAO.updateRoom(room); // Assuming this updates the DB
 
         System.out.println("SUCCESS: Allotted student " + student.getStudentId() +
                 " to room " + room.getRoomNumber() +
@@ -149,7 +169,7 @@ public class AllotmentEngine {
 
     /**
      * Calculates a compatibility score between two students.
-     * **THIS IS THE METHOD YOU SHOULD CUSTOMIZE.**
+     * **THIS IS THE UPDATED METHOD USING CONSTANTS AND OVERLAP LOGIC.**
      *
      * @return A score (e.g., 0-100)
      */
@@ -160,19 +180,20 @@ public class AllotmentEngine {
 
         // --- !! CUSTOMIZE YOUR SCORING HERE !! ---
 
-        // Example: Sleep type is very important
+        // Example: Sleep type is very important (using constants)
         if (s1.getSleepType() != null && s1.getSleepType().equals(s2.getSleepType())) {
             score += 30;
         }
 
-        // Example: Study preference is important
-        if (s1.getStudyPreference() != null && s1.getStudyPreference().equals(s2.getStudyPreference())) {
-            score += 20;
-        }
-
-        // Example: Lifestyle
-        if (s1.getLifestyle() != null && s1.getLifestyle().equals(s2.getLifestyle())) {
-            score += 15;
+        // Example: Study preference is important (using constants)
+        if (s1.getStudyPreference() != null && s2.getStudyPreference() != null) {
+            if (s1.getStudyPreference().equals(PreferenceConstants.QUIET_STUDY) &&
+                    s2.getStudyPreference().equals(PreferenceConstants.QUIET_STUDY)) {
+                score += 20;
+            } else if (s1.getStudyPreference().equals(PreferenceConstants.MUSIC_STUDY) &&
+                    s2.getStudyPreference().equals(PreferenceConstants.MUSIC_STUDY)) {
+                score += 20;
+            }
         }
 
         // Example: Vegetarian
@@ -185,13 +206,46 @@ public class AllotmentEngine {
             score += 10;
         }
 
-        // You can add more complex logic for hobbies (e.g., check for common hobbies)
-        // ...
+        // Example: Room Presence
+        if (s1.getRoomPresence() != null && s1.getRoomPresence().equals(s2.getRoomPresence())) {
+            score += 5;
+        }
+
+        // --- NEW LOGIC FOR MULTI-VALUE FIELDS ---
+        // Give 5 points for each matching lifestyle habit
+        score += calculateOverlapScore(s1.getLifestyle(), s2.getLifestyle(), 5);
+
+        // Give 3 points for each matching hobby
+        score += calculateOverlapScore(s1.getHobbies(), s2.getHobbies(), 3);
+
+        // Give 2 points for each matching sharing habit
+        score += calculateOverlapScore(s1.getSharingHabits(), s2.getSharingHabits(), 2);
 
         return score;
     }
 
+    /**
+     * Helper method to calculate a score based on common elements in two
+     * comma-separated strings (e.g., "Coding, Gaming" and "Music, Gaming").
+     *
+     * @param csv1           First student's preference string (e.g., "Tidy, Quiet")
+     * @param csv2           Second student's preference string (e.g., "Tidy")
+     * @param pointsPerMatch Points to award for each common item
+     * @return Total score for the overlap
+     */
+    private int calculateOverlapScore(String csv1, String csv2, int pointsPerMatch) {
+        if (csv1 == null || csv1.isEmpty() || csv2 == null || csv2.isEmpty()) {
+            return 0;
+        }
 
+        // Split strings by ", " and put them into a Set for fast lookup
+        Set<String> set1 = new HashSet<>(Arrays.asList(csv1.split(", ")));
+        Set<String> set2 = new HashSet<>(Arrays.asList(csv2.split(", ")));
 
+        // Find the intersection (common elements)
+        set1.retainAll(set2);
 
+        // Return score based on the number of common elements
+        return set1.size() * pointsPerMatch;
+    }
 }
